# vllm-cookbook

./: .env.example  .gitignore  README.md  knowledge_vllm.md  pyproject.toml  response_evaluation.py  response_generation.py  train_sft.py
docs/: 00_install.md  01_quickstart.md  02_tp_pp.md  03_lora_serving.md  04_common_pitfalls.md
docs/zh/: 00_仓库导读.md  01_vllm核心原理.md  02_lora注入与服务.md  03_参数与调优清单.md  README.md
evaluators/: Qwen3PrivacyGuard_vllm.py  README.md
examples/: 00_minimal_generate.py  01_chat_template.py  02_token_ids_api.py  03_lora_request.py  04_tp_check_heads.py
examples/system_prompts/: system_prompt_response_evaluation_20260109.txt
judge_vllm_inference/: JailJudge_guard_hf.py  JailJudge_guard_vllm.py  README.md
scripts/: run_lora.sh  run_minimal.sh
src/vllm_cookbook/: __init__.py  prompts.py  tp.py  utils.py
tests/: test_tp.py
