[project]
name = "vllm-cookbook"
version = "0.1.0"
description = "Practical vLLM recipes: TP, LoRA, prompt building, and evaluation pipeline."
requires-python = ">=3.9"
dependencies = [
  "vllm",
  "transformers",
  "datasets",
  "torch",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
